# parsnip

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  install.sh  todo.md
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
crates/parsnip-cli/: Cargo.toml
crates/parsnip-cli/src/: config.rs  main.rs  output.rs
crates/parsnip-cli/src/commands/: completions.rs  config.rs  entity.rs  io.rs  mod.rs  project.rs  relation.rs  search.rs
crates/parsnip-core/: Cargo.toml
crates/parsnip-core/src/: entity.rs  error.rs  graph.rs  lib.rs  limits.rs  observation.rs  project.rs  query.rs  relation.rs  traversal.rs
crates/parsnip-mcp/: Cargo.toml
crates/parsnip-mcp/src/: handlers.rs  lib.rs  server.rs  sse.rs  tools.rs  transport.rs
crates/parsnip-search/: Cargo.toml
crates/parsnip-search/src/: error.rs  exact.rs  fulltext.rs  fuzzy.rs  hybrid.rs  lib.rs  traits.rs  vector.rs
crates/parsnip-storage/: Cargo.toml
crates/parsnip-storage/src/: error.rs  lib.rs  memory.rs  migration.rs  redb.rs  sqlite.rs  traits.rs
docs/: index.html  llms.txt  spec.md  todo.md
