[package]
name = "parsnip-mcp"
description = "MCP server for Parsnip memory management platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["fulltext"]
fulltext = ["parsnip-search/fulltext"]
sse = ["axum", "tower", "tower-http", "async-stream"]

[dependencies]
parsnip-core = { workspace = true }
parsnip-storage = { workspace = true }
parsnip-search = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP/SSE (optional)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
