[package]
name = "parsnip-storage"
description = "Storage backends for Parsnip memory management platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["redb"]
redb = ["dep:redb"]
sqlite = ["dep:rusqlite"]

[dependencies]
parsnip-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Storage backends
redb = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
